--- a/index.html
+++ b/index.html
@@ -7,43 +7,37 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>FísicaFLIX</title>
+    <title>FisicaFLIX</title>
 </head>
 
 <body>
-    <header>FÍSICAFLIX</header>
+    <header>FISICAFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO</h1>
-            <p>#homem-aranha</p>
+            <h1>Repositório de Vídeos sobre Física</h1>
+            <p>#FisicaFLIX</p>
         </div>
 
-        <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
     </section>
 
     <section class="categoria">
         <h2>Vídeos</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=rlVpuy-0C2g&t=34s">
-                <img src="https://img.youtube.com/vi/rlVpuy-0C2g/maxresdefault.jpg" />
+                <img src="https://i.ytimg.com/vi/rlVpuy-0C2g/hqdefault.jpg?sqp=-oaymwEmCOADEOgC8quKqQMa8AEB-AHIBYAClgOKAgwIABABGGUgTihAMA8=&rs=AOn4CLCPvOu5YhRb-eLSmnjevt4WvL9qoQ" />
             </a>
             <a href="https://www.youtube.com/watch?v=eD7mgP0a0Tk&t=41s">
-                <img src="https://img.youtube.com/vi/eD7mgP0a0Tk/maxresdefault.jpg" />
+                <img src="https://i.ytimg.com/vi/eD7mgP0a0Tk/mqdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=cnme5eZM8-c">
+                <img src="https://i.ytimg.com/vi/cnme5eZM8-c/hqdefault.jpg?sqp=-oaymwEmCOADEOgC8quKqQMa8AEB-AHKBYACmgOKAgwIABABGFwgXChcMA8=&rs=AOn4CLBrLZR_drmgWs-6r4rGpvMoa6T2Xg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=-5YSNiU9i5o">
+                <img src="https://i.ytimg.com/vi/-5YSNiU9i5o/hqdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=1IE22Qywn4A&t=305s">
+                <img src="https://i.ytimg.com/vi/Ww4gYNrOkkg/sddefault.jpg" />
             </a>
         </div>
     </section>
